# bp-chat-reader-tui

./: .env.sample  .gitignore  README.md  flake.nix  main.py  pyproject.toml
.bin/: fetch  view
data/: ftrends_19Apr2025.jsonl  waiverlyn_chats_18_apr_2025.jsonl
src/: fetchMessages.py  viewChats.py
src/viewer/: displayConversation.py  filterConversation.py  helpWindow.py  searchConversation.py  tagConversation.py
