[project]
name = "bp-chat-reader-tui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyperclip>=1.9.0",
    "tqdm>=4.67.1",
]
[tool.uv.scripts]
fetch = "python3 src/fetchMessages.py --output data/bot_conversations.jsonl"
view = "python3 src/viewChats.py -f data/bot_conversations.jsonl"
