[project]
name = "bp-chat-reader-tui"
version = "0.1.0"
description = "Utility for fetching and viewing Botpress conversations in the terminal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyperclip>=1.9.0",
    "tqdm>=4.67.1",
]

[project.scripts]
fetch = "python3 src/fetchMessages.py"
view = "python3 src/viewChats.py"
